--- a/VehicleStyle/index.html
+++ b/VehicleStyle/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>VehicleStyle Calculator</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=9031ec4732e76ac3dca18cc149dd17bb">
-    <link rel="stylesheet" href="assets/css/styles.min.css?h=ca7273d9e14704226c940a898c48d607">
+    <link rel="stylesheet" href="assets/css/Highlight-Clean.css?h=22f5c37d9256feae966552e68b9ff2f3">
+    <link rel="stylesheet" href="assets/css/styles.css?h=c68f961d3ca0bc505f582372ed8278ff">
 </head>
 
 <body style="color: rgb(255,255,255);background: rgb(57,108,154);">
@@ -81,7 +82,7 @@
     <footer></footer>
     <script src="assets/js/jquery.min.js?h=89312d34339dcd686309fe284b3f226f"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js?h=1eb47230ed13e88113270f63f470e160"></script>
-    <script src="assets/js/script.min.js?h=c74f7923adef5333d9a2bb1101e9f720"></script>
+    <script src="assets/js/app.js?h=f7ddd108c88035e618f91556f6ea7f68"></script>
 </body>
 
 </html>
